# playdsp

./: .gitignore  CLAUDE.md  Cargo.toml  DEPENDENCIES.md  INSTALL.md  LICENSE  Makefile  README.md  build.rs  install.sh  playdsp
audio/: playdsp
audio/process/: Cargo.toml  build.rs
audio/process/src/: lib.rs
audio/process/src/processing/: cpp_process_audio.cpp  mod.rs
audio/processing/: cpp_process_audio.cpp  rust_process_audio.rs
dsp/: Cargo.toml  build.rs
dsp/src/: constants.rs  main.rs
dsp/src/processing/: mod.rs
examples/: dependencies.toml
playdsp_installer/: playdsp.pkg
playdsp_installer/payload/: playdsp
playdsp_installer/scripts/: postinstall
processing/: rust_process_audio.rs
replace/: put_replacement_audio_files_here.txt
src/: main.rs
src/constants/: constants.rs
src/external_processing/: cpp_process_audio.cpp  mod.rs  rust_process_audio.rs
src/file_processing/: mod.rs
src/file_processing/audio_processing/: get_audio_files_from_folder.rs  mod.rs  replace_audio_files.rs
src/file_processing/code_processing/: create_folders_and_copy_files.rs  get_program_files.rs  mod.rs  process_and_copy_files.rs
src/program_recompile/: mod.rs  run_recompile.rs  run_tests.rs
src/signal_processing/: mod.rs  process_multiple_audio_files.rs
templates/: Cargo.toml.template  build.rs.template  main.rs.template
